--- a/src/nav-bar.html
+++ b/src/nav-bar.html
@@ -22,8 +22,8 @@
           Dropdown <span class="caret"></span>
         </a>
                     <ul class="dropdown-menu">
-                        <li><a href="#/parent/1/users">Parent1</a></li>
-                        <li><a href="#/parent/2/users">Parent2</a></li>
+                        <li><a href="#/parent/1/welcome">Parent1</a></li>
+                        <li><a href="#/parent/2/welcome">Parent2</a></li>
                     </ul>
                 </li>
             </ul>
